[gd_scene load_steps=9 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://mob.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/back.jpg" type="Texture" id=5]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="main" type="Node"]
script = ExtResource( 2 )
mob = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 750.0
margin_bottom = 1334.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.0196078, 0.380392, 0.615686, 1 )

[node name="mobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="scoreTimer" type="Timer" parent="."]

[node name="startTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="mobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="mobSponLocation" type="PathFollow2D" parent="mobPath"]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="deathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 0.5
[connection signal="hit" from="player" to="." method="game_over"]
[connection signal="timeout" from="mobTimer" to="." method="_on_mobTimer_timeout"]
[connection signal="timeout" from="scoreTimer" to="." method="_on_scoreTimer_timeout"]
[connection signal="timeout" from="startTimer" to="." method="_on_startTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
